@@ -14,6 +14,9 @@ Lua:
  - call gadgetHandler:Explosion for unsynced gadgets (but discard the return value)
  - allow specifying source by position but target by ID for Spring.GetUnitWeaponHaveFreeLineOfFire
  - allow setting terrain-type hardness and name via Spring.SetTerrainTypeData
+ ! return the terrain-type index from Spring.GetGroundInfo and Spring.GetTerrainTypeData
+   these functions now push [number index, string name, ...] rather than [string name, ...]
+   onto the stack
 
 Misc:
  - remove joystick support
